# caw-bms

./: .gitignore  CawBMS.kicad_prl  CawBMS.xml  LICENSE  README.md  fp-info-cache
CawBMS.pretty/: POWER_PAD.kicad_mod
Firmware/: .mxproject  CawBMS.ioc  Makefile  README.md  STM32-for-VSCode.config.yaml  STM32F103CBTx_FLASH.ld  STM32Make.make  openocd.cfg
Firmware/CAW-PACKAGES/: caw_status.h
Firmware/CAW-PACKAGES/BQ76920/: bq76920.c
Firmware/CAW-PACKAGES/Protocol/: protocol.h
Firmware/CAW-PACKAGES/Utils/: endian.c  utils.h
Firmware/Core/Inc/: FreeRTOSConfig.h  (+6 more)
GUI/: Cargo.toml  GUI.pro  build.rs  main.cpp  mainwidget.cpp  mainwidget.h
GUI/src/: main.rs
GUI/src/protocol/: cmd.rs  mod.rs  pingpong.rs  protocol.rs
GUI/src/utils/: utils.rs
GUI/ui/: appwindow.slint  cell_info.slint  cell_list.slint  home.slint  log.slint  serial.slint
GUI/ui/widgets/: buttons.slint
PCB/: #auto_saved_files#  BQ76920.kicad_sch  CawBMS.csv  CawBMS.kicad_pcb  CawBMS.kicad_prl  CawBMS.kicad_pro  CawBMS.kicad_sch  fp-info-cache  fp-lib-table  ~CawBMS.kicad_sch.lck
PCB/CawBMS.pretty/: POWER_PAD.kicad_mod
PCB/Gerber/: CawBMS-B_Cu.gbr  CawBMS-B_Mask.gbr  CawBMS-B_Paste.gbr  CawBMS-B_Silkscreen.gbr  CawBMS-Edge_Cuts.gbr  CawBMS-F_Cu.gbr  CawBMS-F_Mask.gbr  CawBMS-F_Paste.gbr  CawBMS-F_Silkscreen.gbr  CawBMS-In1_Cu.gbr  CawBMS-In2_Cu.gbr  CawBMS-NPTH-drl_map.gbr  CawBMS-NPTH.drl  CawBMS-PTH-drl_map.gbr  CawBMS-PTH.drl  CawBMS-drl.rpt  CawBMS-job.gbrjob
PCB/bom/: ibom.html
Shell/: CawBMS-Shell.FCStd
Source/: CawBMS.ioc  Makefile  STM32F103CBTx_FLASH.ld  STM32Make.make
(+38 files in other folders)
