[package]
name = "GUI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
lazy_static = "1.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serialport = "4.3.0"
slint = "1.3.2"
tokio = { version = "1.35.1", features = ["full"] }

[build-dependencies]
slint-build = "1.3.2"
